force-app/main/default/objects/sfdatagenerator__Data_Generation__c/sfdatagenerator__Data_Generation__c.object-meta.xml
<CustomObject>
    <description>Instances where data is generated. Used to be able to delete records that were previously generated.</description>
    <label>Data Generation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Data Generation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Generations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>