force-app/main/default/objects/sfdatagenerator__Data_Generation__c/fields/sfdatagenerator__Batch_IDs__c.field-meta.xml
<CustomField>
    <fullName>sfdatagenerator__Batch_IDs__c</fullName>
    <description>a list of batch IDs so we can update the generation status</description>
    <label>Batch IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>