force-app/main/default/objects/sfdatagenerator__Data_Generation__c/fields/sfdatagenerator__Configuration__c.field-meta.xml
<CustomField>
    <fullName>sfdatagenerator__Configuration__c</fullName>
    <description>The saved JSON configuration of the generation for reuse.</description>
    <label>Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>