force-app/main/default/objects/sfdatagenerator__Data_Generation__c/fields/sfdatagenerator__deleted__c.field-meta.xml
<CustomField>
    <fullName>sfdatagenerator__deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deleted</label>
    <type>Checkbox</type>
</CustomField>