force-app/main/default/objects/sfdatagenerator__Data_Generation__c/fields/sfdatagenerator__Error_Count__c.field-meta.xml
<CustomField>
    <fullName>sfdatagenerator__Error_Count__c</fullName>
    <label>Error Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>