force-app/main/default/objects/sfdatagenerator__Data_Generation__c/fields/sfdatagenerator__Objects__c.field-meta.xml
<CustomField>
    <fullName>sfdatagenerator__Objects__c</fullName>
    <label>Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>