force-app/main/default/objects/sfdatagenerator__Data_Generation__c/fields/sfdatagenerator__Records__c.field-meta.xml
<CustomField>
    <fullName>sfdatagenerator__Records__c</fullName>
    <label>Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>